<resources>
    <string name="app_name">BoaViagem</string>

    <!-- Strings da tela de login -->
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="logo_de_login">Logo de Login</string>

    <!-- Strings da autentificacao de login -->
    <string name="erro_autenticacao">Erro na autentificação</string>

    <!-- Strings da tela dashboard -->
    <string name="novo_gasto">Novo Gasto</string>
    <string name="novo_gasto_text">Está pronto para um novo gasto?
    clique aqui, faça já as contas e evite surpresas!"</string>

    <string name="nova_viagem">Nova Viagem</string>
    <string name="nova_viagem_text">Cansado de sua vida? Aproveite nosso APP
        e planeje agora sua nova viagem!"</string>

    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="minhas_viagens_text">Não se lembra do quanto gastou na ultima viagem?
        Clique aqui e relembre cada gasto efetuado!"</string>

    <string name="configuracoes">Configurações</string>
    <string name="config_text">Entre aqui para personalizar seu aplicativo.
        Deixe ele como melhor quiser!</string>

    <!-- Strings da tela novaviagem -->
    <string name="destino">Destino: </string>
    <string name="tipo_da_viagem">Tipo de Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="data_da_chegada">Data da Chegada</string>
    <string name="data_da_saida">Data da Saida</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas:</string>
    <string name="salvar">Salvar</string>

    <!-- Strings da tela Novo Gasto -->
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="descricacao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei tudo isso ai!</string>
    <string name="categoria">Categoria</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustivel</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <!-- Textos dos menus -->
    <string name="sair">Sair</string>
    <string name="remover">Remover</string>

</resources>
