<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:labelFor="@+id/destino"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_da_viagem"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lazer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lazer"/>

                <RadioButton
                    android:id="@+id/negocios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negocios"/>

            </RadioGroup>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:text="@string/data_da_chegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
                <TextView android:text="@string/data_da_saida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />
            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/dataChegada"
                style="?android:attr/buttonBarStyle"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:tag="@string/data_da_chegada"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
            <Button android:id="@+id/dataSaida"
                style="?android:attr/buttonBarStyle"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="selecionarData"
                android:tag="@string/data_da_saida"
                android:text="@string/selecione"/>

        </TableRow>


        <TextView android:text="@string/orcamento"
            android:labelFor="@+id/orcamento"/>

        <EditText android:id="@+id/orcamento"
            android:inputType="numberDecimal"/>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:text="@string/quantidade_de_pessoas"
                android:labelFor="@+id/quantidadePessoas"/>

            <EditText android:id="@+id/quantidadePessoas"
                android:inputType="number"/>
        </TableRow>

        <Button android:onClick="salvarViagem"
            style="?android:attr/actionButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/salvar"/>
    </TableLayout>

</ScrollView>