<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagemnovogasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/novo_gasto"
                    android:src="@drawable/dollarbills" />

                <TextView
                    android:id="@+id/novo_gasto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagemnovogasto"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="24dp"
                    android:text="@string/novo_gasto_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/novo_gasto"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorAccent"
                    android:onClick="selecionarOpcao"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:text="@string/novo_gasto"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextColors" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagemnovaviagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/novo_gasto"
                    android:src="@drawable/tabletcharts" />

                <TextView
                    android:id="@+id/nova_viagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagemnovaviagem"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="24dp"
                    android:text="@string/nova_viagem_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/nova_viagem"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorAccent"
                    android:onClick="selecionarOpcao"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:text="@string/nova_viagem"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextColors" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagemminhasviagens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/novo_gasto"
                    android:src="@drawable/bank" />

                <TextView
                    android:id="@+id/minhas_viagens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagemminhasviagens"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="24dp"
                    android:text="@string/minhas_viagens_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/minhas_viagens"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorAccent"
                    android:onClick="selecionarOpcao"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:text="@string/minhas_viagens"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextColors" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagemconfiguracoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/novo_gasto"
                    android:src="@drawable/geardollar" />

                <TextView
                    android:id="@+id/confiuracoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagemconfiguracoes"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:paddingTop="24dp"
                    android:text="@string/config_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/confiuracoes"
                    android:layout_marginBottom="0dp"
                    android:background="@color/colorAccent"
                    android:onClick="selecionarOpcao"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:text="@string/configuracoes"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextColors" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>